# sarcastic-hub

./: .pre-commit-config.yaml  Cargo.toml  README.md
audio-sink/: Cargo.toml
audio-sink/src/: main.rs  player.rs  pulsewatcher.rs
hub/: Cargo.toml
hub/src/: filesystem_provider.rs  hub.rs  main.rs  provider.rs  resource.rs  resource_manager.rs  web_ui_messages.rs  ws_server.rs
messages/: Cargo.toml
messages/src/: lib.rs  sink_management.rs  web_interface.rs
src/: config.rs  filesystem_provider.rs  hub.rs  main.rs  provider.rs  resource.rs  sink_management_messages.rs  web_ui.rs  web_ui_messages.rs  ws_server.rs
