[package]
name = "sarcastic-hub"
version = "0.1.0"
authors = ["Daniel Chabrowski <danchabrowski@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.8"
anyhow = "1"
futures-util = "0.3"
tokio = { version = "1", features = [ "full" ] }
tokio-tungstenite = "0.13"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
async-trait = "0.1"
walkdir = "2"
