[package]
name = "sarcastic-audio-sink"
version = "0.1.0"
authors = ["Daniel Chabrowski <danchabrowski@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.66"
env_logger = "0.9.3"
futures-util = "0.3.25"
glib = "0.15.12"
gstreamer = "0.18.8"
gstreamer-player = "0.18.0"
log = "0.4.17"
messages = { package = "sarcastic-messages", version = "0.1", path = "../messages" }
pulse = { version = "2.26.0", package = "libpulse-binding" }
serde = { version = "1.0.147", features = [ "derive" ] }
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = [ "full" ] }
tokio-tungstenite = "0.17.2"
url = "2.3.1"
uuid = { version = "1.2.2", features = [ "v4" ] }
