[package]
name = "sarcastic-hub"
version = "0.1.0"
authors = ["Daniel Chabrowski <danchabrowski@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.44"
async-trait = "0.1.51"
env_logger = "0.9.0"
futures-util = "0.3.17"
log = "0.4.14"
messages = { package = "sarcastic-messages", version = "0.1", path = "../messages" }
serde = { version = "1.0.130", features = [ "derive" ] }
serde_json = "1.0.68"
tokio = { version = "1.12.0", features = [ "full" ] }
tokio-stream = "0.1.7"
tokio-tungstenite = "0.15.0"
uuid = { version = "0.8.2", features = [ "v4", "serde" ] }
walkdir = "2.3.2"
