[package]
name = "sarcastic-hub"
version = "0.1.0"
authors = ["Daniel Chabrowski <danchabrowski@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1.56"
env_logger = "0.9.0"
futures-util = "0.3.21"
log = "0.4.17"
messages = { package = "sarcastic-messages", version = "0.1", path = "../messages" }
serde = { version = "1.0.139", features = [ "derive" ] }
serde_json = "1.0.82"
tokio = { version = "1.20.0", features = [ "full" ] }
tokio-stream = "0.1.9"
tokio-tungstenite = "0.17.2"
uuid = { version = "1.1.2", features = [ "v4", "serde" ] }
walkdir = "2.3.2"
