[package]
name = "sarcastic-hub"
version = "0.1.0"
authors = ["Daniel Chabrowski <danchabrowski@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.58"
env_logger = "0.9.3"
futures-util = "0.3.25"
log = "0.4.17"
messages = { package = "sarcastic-messages", version = "0.1", path = "../messages" }
serde = { version = "1.0.147", features = [ "derive" ] }
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = [ "full" ] }
tokio-stream = "0.1.11"
tokio-tungstenite = "0.17.2"
uuid = { version = "1.2.2", features = [ "v4", "serde" ] }
walkdir = "2.3.2"
